@@ -1,6 +1,6 @@
 [package]
 name = "fc-userscan"
-version = "0.2.0"
+version = "0.3.0-dev"
 authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
 description = """\
 Scans files for Nix store references and registers them with the Nix garbage collector.
