@@ -1,3 +1,14 @@
+2017-09-18  Christian Kauhaus <kc@flyingcircus.io>
+
+	* Change behaviour of --list: It doesn't register found references by
+	default anymore. Specify --list --register to get both (#11).
+
+	* Output: General improvements to make log files easier to read.
+
+	* Output: Skip progress messages when in --list mode.
+
+	* Cache: Don't change cache when in --list mode.
+
 2017-08-30  kc@flyingcircus.io
 
 	* Release 0.2.0
